# HTTP-Forwarding

./: .gitignore  LICENSE  pyproject.toml  readme.md
src/: app.py  jinja_template.py  main.py
src/controllers/: __init__.py  register.py  session_manager.py
src/models/: IRegister.py  __init__.py
src/services/: device_service.py
src/static/: styles.css
src/templates/: index.html
